--- a/marine_learning/client/src/App.css
+++ b/marine_learning/client/src/App.css
@@ -1,5 +1,8 @@
 .App {
   /* text-align: center; */
+  /* background-color: rgb(0, 60, 255); */
+  background-image: url('y.avif');
+  background-size: cover;
 }
 
 .App-logo {
