--- a/marine_learning/client/src/components/InfoList.css
+++ b/marine_learning/client/src/components/InfoList.css
@@ -10,10 +10,10 @@
     width:fit-content;
     display:flex;
     margin-left :150px;
-    border:2px solid black;
+    border: 8px solid black;
     border-radius: 15px;
     padding:5px;
-    background-color: yellow;
+    background-color: rgb(248, 235, 3);
 }
 #inputId{
     width:200px;
@@ -29,3 +29,4 @@
     border-radius:10px;
     font-size: 16px;
 }
+
