--- a/marine_learning/client/src/components/Quizz.css
+++ b/marine_learning/client/src/components/Quizz.css
@@ -7,23 +7,10 @@
     grid-template-rows: auto auto;
     grid-column-gap: 25px ;
 }
-
-#questions {
-    margin-left: 10%;
-    margin-top: 6%;
-    background-color: rgba(46, 161, 243, 0.672);
-    border-radius: 60px;
-    border: 60px Solid rgba(238, 242, 240, 0.511);
-    padding: 5%;
-    font-weight: bold;
-    font-size: 20px;
-    border-style:dotted;
-}
-
 #scores{
     margin-top: 9%;
     margin-right: 10%;
-    margin-bottom: 2280px;
+    margin-bottom: 4280px;
     position: sticky;
     top:0;
     position: -webkit-sticky;
@@ -34,4 +21,64 @@
     font-weight: bold;
     font-size: 20px;
     border-style:dotted;
+}
+
+#questions {
+    margin-left: 10%;
+    margin-top: 6%;
+    margin-bottom: 1280px;
+    background-color: rgba(46, 161, 243, 0.672);
+    border-radius: 60px;
+    border: 60px Solid rgba(238, 242, 240, 0.511);
+    padding: 5%;
+    font-weight: bold;
+    border-style:dotted;
+    color: rgb(56, 56, 56);
+}
+
+#questions-ul {
+    list-style: none;
+}
+
+#question-li {
+    border-radius: 15px;
+    border: 2px solid rgb(237, 233, 233);
+    margin: 5px;
+    padding:5px;
+    text-align: center;
+}
+
+#buttons {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+#button1:hover {
+    background-color: fuchsia;
+    color: white;
+}
+#button2:hover {
+    background-color: fuchsia;
+    color: white;
+}
+
+#button1 {
+    font-size: 20px;
+    width: fit-content;
+    padding: 5px;
+    border-radius: 10px;
+    border: 3px solid rgb(241, 241, 245);
+    background-color: rgb(244, 227, 165);
+    font-family: 'Happy Monkey', 'Sans Serif';
+}
+
+#questions-p{
+    font-size: 25px;
+}
+
+.randomise-button {
+    display: flex;
+    margin-left: 43%
+
 }
