--- a/marine_learning/client/src/components/InfoList.css
+++ b/marine_learning/client/src/components/InfoList.css
@@ -1,5 +1,7 @@
 #body-list{
-    background-image: url('../waves.jpeg')
+    background-image: url('../waves.jpeg');
+    margin-top:-16px;
+    padding: 30px;
 }
 
 #infoUl{
@@ -14,10 +16,11 @@
     width:fit-content;
     display:flex;
     margin-left :150px;
-    border: 8px solid black;
+    border: 3px solid aliceblue;
     border-radius: 15px;
     padding:5px;
-    background-color: rgb(248, 235, 3);
+    background-color: aliceblue;
+
 }
 #inputId{
     width:200px;
@@ -34,3 +37,46 @@
     font-size: 16px;
 }
 
+.go-to-quizz {
+    display: flex;
+    justify-content: center;
+    padding: 20px; 
+    border: 2px solid rgb(242, 236, 236);
+    border-style: dotted;
+    background-color: rgb(47, 89, 255); 
+    margin-right: 40%;
+    margin-left: 40%;
+    border-radius: 30px;
+    transition: 1s;
+}
+
+.go-to-quizz:hover {
+    display: flex;
+    justify-content: center;
+    padding: 2%; 
+    border: 2px solid rgb(249, 246, 246);
+    border-style: dotted;
+    transition: 2s;
+    background-color: rgb(106, 17, 239); 
+    margin-right: 40%;
+    margin-left: 40%;
+    border-radius: 30px;
+}
+
+.link-to-quizz {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.link-to-quizz:hover {
+    color: rgb(239, 234, 234);
+    font-size: 25px;
+    transition: 1s;
+}
+
+/* @keyframes rotate {
+    100% { 
+        transform: rotate (1turn);
+    }
+} */
