--- a/marine_learning/client/src/components/Quizz.css
+++ b/marine_learning/client/src/components/Quizz.css
@@ -5,11 +5,11 @@
     display: grid;
     grid-template-columns: 60% 40%;
     grid-template-rows: auto auto;
-    grid-column-gap: 25px ;
+    grid-column-gap: 1rem;
 }
 #scores{
     margin-top: 9%;
-    margin-right: 10%;
+    margin-right: 1rem;
     /* margin-bottom: 4280px; */
     height: 550px; /* <-- THIS allowed us to do sticky! */
     top:0;
@@ -28,8 +28,8 @@
     display:grid;
     grid-template-columns: 100%;
     grid-template-rows: auto;
-    justify-content: center;
-    margin-left: 10%;
+    justify-self: center;
+    margin-left: 1rem;
     margin-top: 6%;
     margin-bottom: 1280px;
     background-color: rgba(46, 161, 243, 0.672);
@@ -90,7 +90,10 @@
     border-radius: 10px;
     border: 3px solid rgb(241, 241, 245);
     background-color: rgb(244, 227, 165);
-    margin-left: 35%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+        
 }
 
 .randomise-button:hover {
