--- a/marine_learning/client/src/components/Header.css
+++ b/marine_learning/client/src/components/Header.css
@@ -1,9 +1,13 @@
 h1{
     text-align: center;
-    font-size: 30px;
-    
+    font-size: 65px;
+    font-family: 'Bubblegum Sans';
+    color: red;
+    /* color: #FF00FF; */
+    -webkit-text-stroke: 1px navy;
+    /* -webkit-text-stroke: 1px rgb(60, 47, 145); */
 }
 .content{
-    padding:5px;
+    padding:2px;
     background-color: rgb(24, 179, 240);
 }
