--- a/marine_learning/client/src/components/HomePage.css
+++ b/marine_learning/client/src/components/HomePage.css
@@ -1,5 +1,5 @@
 #home-page-body {
-    background-color: aqua;
+    background-color: rgba(0, 191, 255, 0.877);
     display:flex;
     flex-direction: column;
     border-radius: 15px;
@@ -11,7 +11,11 @@
 }
 
 #section-body{
-    background-color: rgb(39, 144, 255);
+    /* background-color: rgb(39, 144, 255); */
+    background-image: url('../kraken.png');
+    background-color: rgb(66, 116, 234);
+    background-size: contain;
+    background-position: center;
     padding: 50px;
     margin-top: -16px;
     padding-bottom: 165px;
