--- a/marine_learning/client/src/components/InfoItem.css
+++ b/marine_learning/client/src/components/InfoItem.css
@@ -3,7 +3,7 @@
     border-radius: 15px;
     padding:10px;
     margin:15px;
-    background-color: rgb(24, 179, 240);
+    background-color: rgba(24, 179, 240, 0.813);
 }
 #checkboxDiv{
     display:flex;
@@ -16,6 +16,8 @@
     grid-template-columns:60% 40%;
     grid-template-rows: auto auto;
     grid-column-gap:70px;
+    text-align:justify;
+    margin-left: 5px;
 }
 #info-image{
     box-shadow: -10px 7px 5px navy;
