--- a/marine_learning/client/src/components/InfoList.css
+++ b/marine_learning/client/src/components/InfoList.css
@@ -53,7 +53,7 @@
     justify-content: center;
     padding: 20px; 
     border: 2px solid rgb(242, 236, 236);
-    border-style: dotted;
+    border-style: solid;
     background-color: rgb(47, 89, 255); 
     margin-right: 40%;
     margin-left: 40%;
@@ -68,7 +68,7 @@
     justify-content: center;
     padding: 2%; 
     border: 2px solid rgb(249, 246, 246);
-    border-style: dotted;
+    border-style: solid;
     transition: 2s;
     background-color: rgb(106, 17, 239); 
     margin-right: 40%;
