--- a/marine_learning/client/src/components/HomePage.css
+++ b/marine_learning/client/src/components/HomePage.css
@@ -7,16 +7,20 @@
     margin: 2rem;
     padding: 2rem;
     text-align: center;
-
+    font-size: 20px;
 }
 
 #section-body{
     /* background-color: rgb(39, 144, 255); */
     background-image: url('../kraken.png');
-    background-color: rgb(66, 116, 234);
+    background-color: rgb(37, 131, 253);
     background-size: contain;
     background-position: center;
     padding: 50px;
     margin-top: -16px;
     padding-bottom: 165px;
+}
+
+#home-list {
+    list-style: none;
 }
